--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -75,8 +75,12 @@ body {
 /* Style description */
 
 .description {
-    width: 80vw;
+    width: 90vw;
     margin:auto;
+}
+
+.poster {
+    max-height: 600px;
 }
 
 /* Style register */
