--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -9,11 +9,11 @@
 
 {% block body %}
 
-    <div class="description m-auto flex flex-col text-white font-semibold">
-        <h1 class="titre-serie mb-5 text-6xl font-semibold md:text-left text-center pt-5">{{ series.title }}</h1>
-            <div class="flex h-full items-center md:items-start md:flex-row flex-col">
-                <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl">
-                <div class="flex flex-col ml-4 mt-10 md:mt-0">
+    <div class="description m-auto lg:w-4/5 flex flex-col text-white font-semibold">
+        <h1 class="titre-serie mb-5 text-6xl font-semibold lg:text-left text-center pt-5">{{ series.title }}</h1>
+            <div class="flex h-full items-center m-auto lg:items-start lg:flex-row flex-col">
+                <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl mb-5">
+                <div class="flex flex-col ml-4">
                     <div class="flex flex-row">
                         {% for genre in series.getGenre %}
                         <h1 class="text-xl text-blue-500 hover:text-blue-custom hover:border-blue-custom mr-2 px-4 p-2 border-blue-500 border-2 rounded-3xl">{{ genre.getName }}</h1>
@@ -47,23 +47,60 @@
                         {% endfor %}
                     </div>
                     <div class=" flex flex-row flex-wrap ml-2 mt-5 mb-5 justify-between">
-                        <div class="flex items-top">
-                            {% for i in 0..9 %}
-                                {% if series.getRate.value|number_format > i and i % 2 == 0 %}
-                                    <img class="h-12 w-12" src="{{ asset('img/etoile_pleine.png') }}">
-                                {% elseif series.getRate.value|number_format <= i and i % 2 == 0 %}
-                                    <img class="w-12 h-12" src="{{ asset('img/etoile_vide.png') }}">
-                                {% endif %}
-                            {% endfor %} 
-                            <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value}}</h1>
-                        </div>
-                        
+                        <div class="flex flex-col items-top mb-5">
+                            <div class="flex mb-5">
+                                {% for i in 0..9 %}
+                                    {% if series.getRate.value|number_format > i and i % 2 == 0 %}
+                                        <img class="h-12 w-12" src="{{ asset('img/etoile_pleine.png') }}">
+                                    {% elseif series.getRate.value|number_format <= i and i % 2 == 0 %}
+                                        <img class="w-12 h-12" src="{{ asset('img/etoile_vide.png') }}">
+                                    {% endif %}
+                                {% endfor %} 
+                                <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value}}</h1>
+                            </div>
+
+                            <div class="w-96 flex flex-col">
+
+                                <div id="accordion-collapse" class="w-full" data-accordion="collapse">
+                                    {% for season in seasons %}
+                                    <h2 id="accordion-collapse-heading-{{ season.number }}">
+                                        <button type="button" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90  " data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                            <div class="flex items-center">
+                                                <span>Saison {{ season.number }}</span>
+                                                <input id="default-checkbox" type="checkbox" class="ml-7 w-6 h-6 text-blue-600 bg-gray-100 border-gray-300 rounded ">
+                                            </div>
+                                            <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-180" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                                        </button>
+                                    </h2>
+                                    <div id="accordion-collapse-body-{{ season.number }}" class="w-40 hidden" aria-labelledby="accordion-collapse-heading-{{season.number}}">
+                                        <div class="flex flex-wrap w-96 px-4 py-2 border border-gray-200 ">
+                                            <ul class="w-full text-xl">
+                                            {% for episode in season.episodes %}
+                                                <li class="flex justify-between items-center px-4 py-2">
+                                                    <h1>{{ episode.number }} - {{ episode.title }}</h1>
+                                                    <div class="flex items-center">
+                                                        <input id="default-checkbox" type="checkbox" class="ml-7 w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                                    </div>
+                                                </li>
+                                            {% endfor %}
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                    
+                                <script src="https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
+                            </div>
   
-                    <div>
-                        <iframe class="rounded-3xl mb-10 md:mb-0" width="560" height="315" src="{{ series.getYoutubeTrailer }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                           
+                                
+                                    
+                                
+                            </div>
+                        </div>
+                        <div>
+                            <iframe class="rounded-3xl mb-10 md:mb-0" width="560" height="315" src="{{ series.getYoutubeTrailer }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                     </div>
-                    
                 </div>
             
             
