--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -12,7 +12,10 @@
     <div class="description m-auto lg:w-4/5 flex flex-col text-white font-semibold">
         <h1 class="titre-serie mb-5 text-6xl font-semibold lg:text-left text-center pt-5">{{ series.title }}</h1>
             <div class="flex h-full items-center m-auto lg:items-start lg:flex-row flex-col">
+                <div class="flex flex-col items-center">
                 <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl mb-5">
+                <a href=""><button onClick="{{app.user.addSeries(series)}}" class="text-2xl" type="submit">Suivre</button></a>  
+                </div>
                 <div class="flex flex-col ml-4">
                     <div class="flex flex-row">
                         {% for genre in series.getGenre %}
@@ -64,10 +67,10 @@
                                 <div id="accordion-collapse" class="w-full" data-accordion="collapse">
                                     {% for season in seasons %}
                                     <h2 id="accordion-collapse-heading-{{ season.number }}">
-                                        <button type="button" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90  " data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
+                                        <button type="button" class="flex items-center justify-between p-5 w-full font-medium text-left border border-blue-500 text-gray-90 bg-black hover:bg-black focus:bg-black focus:hover:bg-black" data-accordion-target="#accordion-collapse-body-{{ season.number }}" aria-expanded="true" aria-controls="accordion-collapse-body-{{ season.number }}">
                                             <div class="flex items-center">
                                                 <span>Saison {{ season.number }}</span>
-                                                <input id="default-checkbox" type="checkbox" class="ml-7 w-6 h-6 text-blue-600 bg-gray-100 border-gray-300 rounded ">
+                                                                                     
                                             </div>
                                             <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-180" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                                         </button>
@@ -75,24 +78,29 @@
                                     <div id="accordion-collapse-body-{{ season.number }}" class="w-40 hidden" aria-labelledby="accordion-collapse-heading-{{season.number}}">
                                         <div class="flex flex-wrap w-96 px-4 py-2 border border-gray-200 ">
                                             <ul class="w-full text-xl">
-                                            {% for episode in season.episodes %}
+                                            {% for episod in season.episodes %}
                                                 <li class="flex justify-between items-center px-4 py-2">
-                                                    <h1>{{ episode.number }} - {{ episode.title }}</h1>
-                                                    <div class="flex items-center">
-                                                        <input id="default-checkbox" type="checkbox" class="ml-7 w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                                    </div>
+                                                       <h1 >{{ episod.number }} - {{ episod.title }}</h1>
+                                                       <a ><button type="submit">Ajouter</button></a>  
                                                 </li>
                                             {% endfor %}
                                             </ul>
                                         </div>
                                     </div>
                                     {% endfor %}
+
+                                    {% for ep in app.user.getEpisode %}
+                                    <p>{{ ep.title}}</p>
+
+                                    {% endfor %}
                                     
                                 <script src="https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
                             </div>
   
                            
-                                
+                                {% for serie in app.user.getSeries %}
+                                <p>serie: {{ serie.title }}</p>
+                                {% endfor %}
                                     
                                 
                             </div>
