--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -1,17 +1,36 @@
+{# {% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+{% endblock %} #}
 {% block body %}
+    {# <style>
+    body {
+        background-image: none;
+    }
+    </style> #}
     <h1>Liste des utilisateurs</h1>
+    <div class="pagination-h">
+        {{ knp_pagination_render(users)}}
+    </div>
     <script src="https://kit.fontawesome.com/204bbbe9f0.js" crossorigin="anonymous"></script>
+
+    {{ form_start(UserSearchForm) }}
+    {{ form_row(UserSearchForm.email, {
+        'label': 'E-mail',
+    }) }}
+    <button type="submit">Chercher</button>
+    {{ form_end(UserSearchForm) }}
+
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Email</th>
+                <th>Nom</th>
+                <th>E-mail</th>
                 {# <th>Password</th> #}
-                <th>RegisterDate</th>
-                <th>Admin</th>
+                <th>Date d'enregistrement</th>
+                <th>Administrateur</th>
                 {# <th>UserId</th> #}
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -21,26 +40,30 @@
                 <td>{{ user.name }}</td>
                 <td>{{ user.email }}</td>
                 {# <td>{{ user.password }}</td> #}
-                <td>{{ user.registerDate ? user.registerDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ user.admin ? 'Yes' : 'No' }}</td>
+                <td>{{ user.registerDate ? user.registerDate|date('d/m/Y H:i:s') : '' }}</td>
+                <td>{{ user.admin ? 'Oui' : 'Non' }}</td>
                 {# <td>{{ user.userId }}</td> #}
                 <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+                    <a href="#"><i class="fa-solid fa-person"></i></i>Incarner</a>
+                    {# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a> #}
                     {% if user.isAdmin() %}
-                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-minus"></i>demote</a>
+                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-minus"></i>rétrograder</a>
                     {% else %}
-                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-plus"></i>promote</a>
+                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-plus"></i>promouvoir</a>
                     {% endif %}
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="8">no records found</td>
+                <td colspan="8">Aucun résultat</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
+    {# <a href="{{ path('app_user_new') }}">Crée un nouvel utilisateur</a> #}
+    <div class="pagination-b">
+        {{ knp_pagination_render(users)}}
+    </div>
+
 {% endblock %}
