--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -22,7 +22,7 @@
             </li>
             {% if app.user %}
             <li class="nav-item px-5 mr-1">
-              <a class="inline-block py-4 hover:text-blue-custom font-semibold" href="#">Mes Séries</a>
+              <a class="inline-block py-4 hover:text-blue-custom font-semibold" href="{{ path('app_user_show', {'id':app.user.id}) }}">Mes Séries</a>
             </li>
             <li class="nav-item px-5 mr-1">
               <a class="inline-block py-4 hover:text-blue-custom font-semibold" href="{{ path('app_login') }}">{{app.user.email}}</a>
