--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -4,10 +4,13 @@
 {% block body %}
 <div class="text-white w-11/12 mx-auto">
     <div class="flex flex-col w-full">
-        <h1 class="text-3xl text-center">Tableau de bord administrateur</h1>
         {% if not is_granted('IS_IMPERSONATOR') %}
-        <h1 class="text-2xl py-2">Liste des utilisateurs</h1>
+        <h1 class="text-3xl text-center mb-2">Tableau de bord administrateur</h1>
+        {% else %}
+        <h1 class="text-3xl text-center mb-2">Liste des utilisateurs</h1>
         {% endif %}
+        
+        
         <div class="pagination-h ">
             {{ knp_pagination_render(users)}}
         </div>
