--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -1,44 +1,40 @@
+{% extends 'base.html.twig' %}
+
 {% block title %}User{% endblock %}
 
+{% block stylesheets %}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Bahnschrift">
+{{ encore_entry_link_tags('app') }}
+    {% endblock %}
+
+
+
 {% block body %}
-    <h1>User</h1>
+<div class="flex-col flex w-4/5 mx-auto">
+    <h1 class="text-3xl text-blue-500">{{ user.name }}</h1>
+    <h1 class="text-2xl text-blue-500">Vos séries suivies</h1>
+    <div class="flex w-full">
+        <div class="flex flex-row-reverse w-96">
+       
+                {% for serie in app.user.getSeries %}
+                <div class="flex flex-col">
+                <h3 class=" font-bold text-white text-center my-5">{{ serie.title }} </h3>
+                <div class="serie-encadre flex flex-col-reverse rounded-2xl mx-5">
+                    
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ user.name }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            {# <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr> #}
-            <tr>
-                <th>RegisterDate</th>
-                <td>{{ user.registerDate ? user.registerDate|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Admin</th>
-                <td>{{ user.admin ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>UserId</th>
-                <td>{{ user.userId }}</td>
-            </tr>
-        </tbody>
-    </table>
+                        <a href="{{ path('app_series_show', {'id': serie.id})}}">
+                            <img class=" rounded-h rounded-2xl" src="{{ serie.displayPoster }}">
+                        </a>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+                    </div>
+                
+                </div>
+                {% endfor %}
+        </div>
+    </div>
+            
+            <a href="{{ path('app_user_index') }}"><button type="submit" >back to list</button></a>
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+</div>
+    
 {% endblock %}
