--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -12,14 +12,18 @@
     <div class="description m-auto lg:w-4/5 flex flex-col text-white font-semibold">
         <h1 class="titre-serie mb-5 text-6xl font-semibold lg:text-left text-center pt-5">{{ series.title }}</h1>
             <div class="flex h-full items-center m-auto lg:items-start lg:flex-row flex-col">
+
                 <div class="flex flex-col items-center">
                 <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl mb-5">
                 {% if app.user %}
-                <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="text-2xl" type="submit">Suivre</button></a>  
-                {# Affichage de la liste des séries suivis par le user pour tester la fonctionnalité (A supprimer des que la fonction est faite) #}
-                
+                    {% if series in app.user.getSeries %}
+                        <a href="{{ path('app_series_remove',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="text-2xl" type="submit">Enlever</button></a>  
+                    {% else %}
+                        <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="text-2xl" type="submit">Suivre</button></a>  
+                    {% endif %}
                 {% endif %}
                 </div>
+
                 <div class="flex flex-col ml-4">
                     <div class="flex flex-row">
                         {% for genre in series.getGenre %}
@@ -79,13 +83,20 @@
                                             <svg data-accordion-icon class="w-6 h-6 shrink-0 rotate-180" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                                         </button>
                                     </h2>
-                                    <div id="accordion-collapse-body-{{ season.number }}" class="w-40 hidden" aria-labelledby="accordion-collapse-heading-{{season.number}}">
+                                    <div id="accordion-collapse-body-{{ season.number }}" class="w-40" aria-labelledby="accordion-collapse-heading-{{season.number}}">
                                         <div class="flex flex-wrap w-96 px-4 py-2 border border-gray-200 ">
                                             <ul class="w-full text-xl">
                                             {% for episod in season.episodes %}
                                                 <li class="flex justify-between items-center px-4 py-2">
                                                        <h1 >{{ episod.number }} - {{ episod.title }}</h1>
-                                                       <a ><button type="submit">Ajouter</button></a>  
+                                                       {% if app.user %}
+                                                            {% if episod in app.user.getEpisode %}
+                                                            
+                                                                <a href="{{ path('app_episode_remove',  {'id': episod.id, 'user_id':app.user.id}) }} "><img class="w-12 h-12" src="{{ asset('img/check.png') }}"></a>  
+                                                            {% else %}
+                                                                <a href="{{ path('app_episode_add',  {'id': episod.id, 'user_id':app.user.id}) }} "><img class="w-12 h-12" src="{{ asset('img/plus.png') }}"></a>  
+                                                            {% endif %}
+                                                        {% endif %}
                                                 </li>
                                             {% endfor %}
                                             </ul>
@@ -98,7 +109,6 @@
                                     
                                 <script src="https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
                             </div>
-  
                             
                                     
                                 
