--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -11,29 +11,40 @@
 
 {% block body %}
 <div class="flex-col flex w-4/5 mx-auto">
-    <h1 class="text-3xl text-blue-500">{{ user.name }}</h1>
+    <a href="{{ path('app_series_index') }}"><button class=" bg-blue-800 hover:bg-blue-custom p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
+    <h1 class="text-3xl text-blue-500 mb-2 font-semibold">{{ user.name }}</h1>
     <h1 class="text-2xl text-blue-500">Vos séries suivies</h1>
-    <div class="flex w-full">
-        <div class="flex flex-row-reverse w-96">
+    
+    <div class="flex w-full ">
+        <div class="flex flex-row w-full items-center">
        
                 {% for serie in app.user.getSeries %}
-                <div class="flex flex-col">
-                <h3 class=" font-bold text-white text-center my-5">{{ serie.title }} </h3>
-                <div class="serie-encadre flex flex-col-reverse rounded-2xl mx-5">
-                    
-
+                <div class="flex flex-col w-48 mx-5">
+                    <h3 class=" font-bold text-white text-center my-5">{{ serie.title }} </h3>
+                    <div class="serie-encadre flex flex-col-reverse rounded-2xl mx-5">
                         <a href="{{ path('app_series_show', {'id': serie.id})}}">
                             <img class=" rounded-h rounded-2xl" src="{{ serie.displayPoster }}">
                         </a>
-
                     </div>
-                
+                    {% if app.user.getAvancement(serie) < app.user.getEpisodeCount(serie) %}
+                    <div class="mt-2">
+                        <h1 class="text-center text-lg text-white">Episodes vus</h1>
+                        <h1 class="text-center text-md text-white">{{ app.user.getAvancement(serie) }}/{{app.user.getEpisodeCount(serie)}}</h1>
+                    </div>
+                    {% elseif app.user.getAvancement(serie) == app.user.getEpisodeCount(serie) %}
+                    <div class="mt-2">
+                        <h1 class="text-center text-lg text-white">Terminée</h1>
+                    </div>
+                    {% endif %}
                 </div>
+                
                 {% endfor %}
         </div>
     </div>
+
+   
             
-            <a href="{{ path('app_user_index') }}"><button type="submit" >back to list</button></a>
+    
 
 </div>
     
