--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -22,10 +22,17 @@
                     <a href="{{ path('app_series_show', {'id': series.id})}}">
                         <img class="border-none rounded-b-none rounded-3xl h-full w-full" src="{{ series.displayPoster }}" alt="poster">
                     </a>
-                    <a>
-                        <img class="serie-plus absolute" width="60px" src="{{ asset('img/plus.png') }}" />
-                        <img class="serie-check absolute" width="60px" src="{{ asset('img/check.png') }}" />
+                    {% if app.user %}
+                    {% if series in app.user.getSeries  %}
+                    <a  href="{{ path('app_series_remove',  {'id': series.id, 'user_id':app.user.id}) }}">
+                        <img class="serie-plus  absolute" width="60px" src="{{ asset('img/check.png') }}" />
                     </a>
+                    {% else %}
+                    <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }}">
+                        <img class="serie-check absolute" width="60px" src="{{ asset('img/plus.png') }}" />
+                    </a>
+                    {% endif %}
+                    {% endif %}
                 </div>
                 
             
