--- a/symfony/templates/series/random.html.twig
+++ b/symfony/templates/series/random.html.twig
@@ -1,70 +1,29 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Liste séries random{% endblock %}
-
 {% block stylesheets %}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Bahnschrift">
-{{ encore_entry_link_tags('app') }}
-    {% endblock %}
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Bahnschrift">
+	{{ encore_entry_link_tags('app') }}
+{% endblock %}
 
-{% block body %}   
-
-<div class="pagination-h">
-            {{ knp_pagination_render(seriesRandom)}}
-        </div>
-<div class="flex flex-wrap flex-row w-full items-center justify-center mb-5">
-        {% for serie in seriesRandom %}
-            <div class="serie-encadre border-none border-4 rounded-3xl flex flex-col-reverse mb-4 h-auto mx-10 mt-10 items-center">
-     
-                <h3 class="titre w-full titre font-bold text-white text-xl text-center pt-5 pb-4">{{ serie.title }} </h3>
-                
-                <div class="poster w-full">
-                    <a href="{{ path('app_series_show', {'id': serie.id})}}">
-                        <img class="border-none rounded-b-none rounded-3xl h-full w-full" src="{{ serie.displayPoster }}" alt="poster">
-                    </a>
-                    <a>
-                        <img class="serie-plus absolute" width="60px" src="{{ asset('img/plus.png') }}" />
-                        <img class="serie-check absolute" width="60px" src="{{ asset('img/check.png') }}" />
-                    </a>
-                </div>
-                
-            
-            </div>
-        
-        {% endfor %}
-    </div>
-     <div class="pagination-b">
-            {{ knp_pagination_render(seriesRandom)}}
-    </div>
-
-        <div class="pagination-h">
-            {{ knp_pagination_render(series)}}
-        </div>
-        <div class="flex flex-wrap flex-row w-full items-center justify-center mb-5">
-        {% for series in series %}
-            <div class="serie-encadre border-none border-4 rounded-3xl flex flex-col-reverse mb-4 h-auto mx-10 mt-10 items-center">
-     
-                <h3 class="titre w-full titre font-bold text-white text-xl text-center pt-5 pb-4">{{ series.title }} </h3>
-                
-                <div class="poster w-full">
-                    <a href="{{ path('app_series_show', {'id': series.id})}}">
-                        <img class="border-none rounded-b-none rounded-3xl h-full w-full" src="{{ series.displayPoster }}" alt="poster">
-                    </a>
-                    <a>
-                        <img class="serie-plus absolute" width="60px" src="{{ asset('img/plus.png') }}" />
-                        <img class="serie-check absolute" width="60px" src="{{ asset('img/check.png') }}" />
-                    </a>
-                </div>
-                
-            
-            </div>
-        
-        {% endfor %}
-    </div>
-        <div class="pagination-b">
-            {{ knp_pagination_render(series)}}
-        </div>
-</div>
-
-
+{% block body %}
+	<style>
+		body {
+			background-image: none;
+		}
+	</style>
+	<div class="flex flex-row w-full h-full">
+		{% for serie in series %}
+			<div class="serie-encadre border-none border-4 rounded-3xl flex flex-col-reverse mb-4 h-auto mx-10 mt-5 items-center">
+				<h3 class="titre w-full titre font-bold text-white text-xl text-center pt-5 pb-4">{{ serie.title }}
+				</h3>
+				<div class="poster w-full">
+					<a href="{{ path('app_series_show', {'id': serie.id})}}">
+						<img class="border-none rounded-b-none rounded-3xl h-full w-full" src="{{ serie.poster }}" alt="poster">
+					</a>
+					<a>
+						<img class="serie-plus absolute" width="60px" src="{{ asset('img/plus.png') }}"/>
+						<img class="serie-check absolute" width="60px" src="{{ asset('img/check.png') }}"/>
+					</a>
+				</div>
+			</div>
+		{% endfor %}
+	</div>
 {% endblock %}
